[#3.2] Added admin approval of new users and user registration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <p class="alert-notice"><%= notice %></p>
+    <p class="alert-alert"><%= alert %></p>
+
     <%= yield %>
   </body>
 </html>
