--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
+<%= render partial: "layouts/navbar" %>
+<%= render partial: "layouts/alerts" %>
+
 <div class="text-center">
   <h1>Welcome to E-Clinic</h1>
 </div>
