--- a/app/views/patients/registrations/edit.html.erb
+++ b/app/views/patients/registrations/edit.html.erb
@@ -1,22 +1,30 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= render partial: "layouts/navbar" %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render partial: "common_fields", locals: {f: f, dissabled_fields: true} %>
+<div class="d-flex justify-content-center">
+  <div class="d-flex flex-column">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-  <br/><br/>
-  
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+    <%= render partial: "layouts/alerts" %>
+
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render partial: "common_fields", locals: {f: f, dissabled_fields: true} %>
+
+      <br/><br/>
+      
+      <div class="field">
+        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.password_field :current_password, autocomplete: "current-password" %>
+      </div>
+
+      <br/>
+
+      <div class="actions">
+        <%= f.submit "Update" %>
+      </div>
+    <% end %>
+
+    <br/>
+
+    <%= link_to "Back", :back %>
   </div>
-
-  <br/>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<br/>
-
-<%= link_to "Back", :back %>
+</div>
