--- a/app/views/patients/registrations/new.html.erb
+++ b/app/views/patients/registrations/new.html.erb
@@ -1,15 +1,21 @@
-<h2>Patient Sign Up</h2>
+<div class="d-flex justify-content-center">
+  <div class="d-flex flex-column">
+    <h2>Patient Sign Up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render partial: "common_fields", locals: {f: f, dissabled_fields: false} %>
+    <%= render partial: "layouts/alerts" %>
 
-  <br/>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render partial: "common_fields", locals: {f: f, dissabled_fields: false} %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+      <br/>
+
+      <div class="actions">
+        <%= f.submit "Sign up" %>
+      </div>
+    <% end %>
+
+    <br/>
+
+    <%= render "patients/shared/links" %>
   </div>
-<% end %>
-
-<br/>
-
-<%= render "patients/shared/links" %>
+</div>
