--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,6 +10,9 @@
         <%= link_to 'Clinics', clinics_path, class: "nav-link" %>        
       </li>
       <li class="nav-item">
+        <%= link_to 'Appoinments', appointments_path, class: "nav-link" %>        
+      </li>
+      <li class="nav-item">
         <%= link_to 'Profile', edit_patient_registration_path, class: "nav-link" %>        
       </li>
       <li class="nav-item">
