--- a/app/views/clinic/index.html.erb
+++ b/app/views/clinic/index.html.erb
@@ -14,16 +14,18 @@
       <th scope="col"><%= link_to "City", clinics_path(order_by: :city) %></th>
       <th scope="col"><%= link_to "Country", clinics_path(order_by: :country) %></th>
       <th scope="col"><%= link_to "Description", clinics_path(order_by: :description) %></th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
     <% @clinics.each do |clinic| %>
       <tr>
-        <td><%= clinic.name %>
-        <td><%= clinic.address.street %>
-        <td><%= clinic.address.city %>
-        <td><%= clinic.address.country %>
-        <td><%= clinic.description %>
+        <td><%= clinic.name %></td>
+        <td><%= clinic.address.street %></td>
+        <td><%= clinic.address.city %></td>
+        <td><%= clinic.address.country %></td>
+        <td><%= clinic.description %></td>
+        <td><%= link_to "show", show_clinic_path(clinic) %></td>
       </tr>
     <% end %>
   </tbody>
