--- a/app/views/appointment/index.html.erb
+++ b/app/views/appointment/index.html.erb
@@ -6,29 +6,4 @@
 
 <%= render partial: "layouts/alerts" %>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col"><%= link_to "Clinic Name", appointments_path(order_by: "clinics.name") %></th>
-      <th scope="col"><%= link_to "Hall", appointments_path(order_by: "halls.name") %></th>
-      <th scope="col"><%= link_to "Doctor", appointments_path(order_by: "first_name, last_name") %></th>
-      <th scope="col"><%= link_to "Type", appointments_path(order_by: :kind) %></th>
-      <th scope="col"><%= link_to "Price", appointments_path(order_by: :price) %></th>
-      <th scope="col"><%= link_to "Date", appointments_path(order_by: :date) %></th>
-      <th scope="col"><%= link_to "Duration", appointments_path(order_by: :duration) %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @appointments.each do |appointment| %>
-      <tr>
-        <td><%= appointment.clinic.name %></td>
-        <td><%= appointment.hall.name %></td>
-        <td><%= appointment.doctor.full_name %></td>
-        <td><%= appointment.price_item.kind %></td>
-        <td><%= appointment.price_item.price %></td>
-        <td><%= appointment.date %></td>
-        <td><%= appointment.duration %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render partial: "table", locals: {appointments: @appointments, book: false} %>
