--- a/app/views/appointment/fast_appointments.html.erb
+++ b/app/views/appointment/fast_appointments.html.erb
@@ -5,4 +5,4 @@
   <h1>Fast Appointments</h1>
 </div>
 
-<%= render partial: "table", locals: {appointments: @appointments, book: true} %>
+<%= render partial: "table", locals: {appointments: @appointments, booking: true} %>
