--- a/app/views/appointment/index.html.erb
+++ b/app/views/appointment/index.html.erb
@@ -6,4 +6,4 @@
 
 <%= render partial: "layouts/alerts" %>
 
-<%= render partial: "table", locals: {appointments: @appointments, book: false} %>
+<%= render partial: "table", locals: {appointments: @appointments, booking: false} %>
