--- a/app/views/clinic/show.html.erb
+++ b/app/views/clinic/show.html.erb
@@ -3,7 +3,8 @@
 <div class="d-flex justify-content-center">
   <div class="d-flex flex-column">
     <h1 class="text-center">Clinic</h1>
-    <%= link_to 'Fast Appointments', fast_appintment_path(clinic_id: @clinic.id) %>
+    <%= link_to 'Fast Appointments', fast_appointments_path(clinic_id: @clinic.id), class: "text-center btn btn-primary" %>
+    <br/>
 
     <h3>Name: <%= @clinic.name %></h3>
     <h3>Address:</h3>
