[#3.13] Added clinic search by date and examination type part 2

--- a/app/views/appointment/_table.html.erb
+++ b/app/views/appointment/_table.html.erb
@@ -21,7 +21,7 @@
         <td><%= appointment.clinic.name %></td>
         <td><%= appointment.hall.name %></td>
         <td><%= appointment.doctor.full_name %></td>
-        <td><%= appointment.price_item.kind %></td>
+        <td><%= appointment.price_item.examination_type.kind %></td>
         <td><%= appointment.price_item.price %></td>
         <td><%= appointment.date %></td>
         <td><%= appointment.duration %></td>
