--- a/app/views/clinic/_appointments.html.erb
+++ b/app/views/clinic/_appointments.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <td><%= appointment.hall.name %></td>
         <td><%= appointment.doctor.full_name %></td>
-        <td><%= appointment.price_item.kind %></td>
+        <td><%= appointment.price_item.examination_type.kind %></td>
         <td><%= appointment.price_item.price %></td>
         <td><%= appointment.date %></td>
       </tr>
