--- a/app/views/clinic/index.html.erb
+++ b/app/views/clinic/index.html.erb
@@ -6,6 +6,16 @@
 
 <%= render partial: "layouts/alerts" %>
 
+
+<%= form_tag("clinics/search", method: "get") do %>
+  <%= label_tag("Search for:") %>
+  <%= label_tag(:date, "Date:") %>
+  <%= date_select(date = Date.current, options = {}, html_options = {required: true}) %>
+  <%= label_tag(:examination_type, "Examination Type:") %>
+  <%= text_field_tag(:examination_type, nil, required: true) %>
+  <%= submit_tag("Search") %>
+<% end %>
+
 <table class="table">
   <thead>
     <tr>
