--- a/app/views/clinic/search.html.erb
+++ b/app/views/clinic/search.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "layouts/navbar" %>
+
 <div class="d-flex justify-content-center">
   <div class="d-flex flex-column">
     <div class="text-center">
